--- a/src/app/ConversationComponents/chat/dialog.component.html
+++ b/src/app/ConversationComponents/chat/dialog.component.html
@@ -12,7 +12,7 @@
       </div>
   </div>
   <ol class="chat" #scrollMe [scrollTop]="scrollMe.scrollHeight" [ngStyle]="{'right' :sidebarVisible ? '220px' : '0'}">
-    <ul *ngFor ='let message of messages' class="ms">
+    <ul *ngFor ='let message of messages'>
       <mat-menu #appMenu="matMenu" [ngStyle]="{'float' :message.sender.userId == user.userId ? 'right' : 'left'}">
         <button *ngIf="message.sender.userId == user.userId" (click)="startSetMessage(message)" mat-menu-item>Редактировать</button>
         <button *ngIf="dialog?.type == 'advertisement'" mat-menu-item>Пометить как решение</button>
