--- a/src/app/UserAndGroupComponents/group-page/group-page.component.html
+++ b/src/app/UserAndGroupComponents/group-page/group-page.component.html
@@ -198,8 +198,8 @@
             </button>
           </div>
           <div class="modal-body p-0 m-0">
-            				<div *ngFor="let user of users">
-            						<app-user-card [(us)]="user" routerLink="/userPage/{{user.userId}}"></app-user-card>
+            				<div *ngFor="let us of users">
+            						<app-user-card [(us)]="user" routerLink="/userPage/{{us.userId}}"></app-user-card>
             				</div>
                 </div>
               </div>
